added search bar, create button with popup and almost useful filters

--- a/lwc/jsconfig.json
+++ b/lwc/jsconfig.json
@@ -20,6 +20,18 @@
             ],
             "c/accountName": [
                 "accountName/accountName.js"
+            ],
+            "c/apexWireMethodToProperty": [
+                "apexWireMethodToProperty/apexWireMethodToProperty.js"
+            ],
+            "c/apexImperativeMethod": [
+                "apexImperativeMethod/apexImperativeMethod.js"
+            ],
+            "c/createObject": [
+                "createObject/createObject.js"
+            ],
+            "c/createSimple": [
+                "createSimple/createSimple.js"
             ]
         }
     },
